2010-03-18  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=36274
        CSS3 :nth-child selector 'odd' keyword case sensitivity test fails
        
        The tests for "odd", "even" etc. for nth-child selectors should be case insensitive.

        * fast/css/nth-child-odd-case-insensitive-expected.txt: Added.
        * fast/css/nth-child-odd-case-insensitive.html: Added.

2010-03-18  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        Additional test for <rdar://problem/7761400>

        * fast/dynamic/float-remove-above-line-2.html: Copied from LayoutTests/fast/dynamic/float-remove-above-line.html.
        * fast/dynamic/float-remove-above-line-expected.txt: Updated.
        * fast/dynamic/float-remove-above-line.html: Fixed inconsequential typo in end tag.

2010-03-18  Alexey Proskuryakov  <ap@apple.com>

        Not reviewed.

        https://bugs.webkit.org/show_bug.cgi?id=36210
        plugins/resize-from-plugin.html fails on some platforms

        Landing new results for Qt and Gtk, taken from buildbot.

        Gtk results are a pass, although the difference in clip rect may indicate some issue to look into.
        Qt results are a failure.

        * platform/gtk/plugins/resize-from-plugin-expected.txt: Copied from LayoutTests/plugins/resize-from-plugin-expected.txt.
        * platform/qt/plugins/resize-from-plugin-expected.txt: Copied from LayoutTests/plugins/resize-from-plugin-expected.txt.

2010-03-12  Ojan Vafai  <ojan@chromium.org>

        Reviewed by David Levin.

        smartdelete should only occur after double-click
        https://bugs.webkit.org/show_bug.cgi?id=35314

        * editing/deleting/non-smart-delete.html:
        * editing/pasteboard/drag-drop-modifies-page.html:
        * editing/pasteboard/page-zoom-expected.txt:
        Space is removed because we used to incorrectly smartpaste here.
        New behavior matches NSTextView.