@@ -1,0 +1,20 @@
+<html>
+<body>
+<embed name="plg" type="application/x-webkit-test-netscape"></embed>
+<p>Test that a plug-in can override Node methods of its element. This also means that the plug-in
+is instantiated when accessing properties and methods of its owner element.</p>
+<p>Should alert PASS.</p>
+<script>
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+
+    function pluginCallback() { alert("PASS") }
+
+    try {
+        plg.normalize();
+    } catch (ex) {
+        alert("Exception: " + ex.description + ". Test plugin was not found");
+    }
+</script>
+</body>
+</html>
