@@ -185,6 +185,7 @@ enum {
     ID_REF_COUNT,
     ID_SET_STATUS,
     ID_RESIZE_TO,
+    ID_NORMALIZE,
     NUM_METHOD_IDENTIFIERS
 };
 
@@ -221,6 +222,7 @@ static const NPUTF8 *pluginMethodIdentifierNames[NUM_METHOD_IDENTIFIERS] = {
     "refCount",
     "setStatus",
     "resizeTo",
+    "normalize"
 };
 
 static NPUTF8* createCStringFromNPVariant(const NPVariant* variant)
@@ -821,6 +823,22 @@ static bool testResizeTo(PluginObject* obj, const NPVariant* args, uint32_t argC
     return true;
 }
 
+static bool normalizeOverride(PluginObject* obj, const NPVariant* args, uint32_t argCount, NPVariant* result)
+{
+    VOID_TO_NPVARIANT(*result);
+
+    NPObject* windowObject;
+    if (NPERR_NO_ERROR != browser->getvalue(obj->npp, NPNVWindowNPObject, &windowObject))
+        return false;
+
+    NPVariant callResult;
+    if (browser->invoke(obj->npp, windowObject, browser->getstringidentifier("pluginCallback"), args, argCount, &callResult))
+        browser->releasevariantvalue(&callResult);
+
+    return true;
+}
+
+
 static bool pluginInvoke(NPObject* header, NPIdentifier name, const NPVariant* args, uint32_t argCount, NPVariant* result)
 {
     PluginObject* plugin = reinterpret_cast<PluginObject*>(header);
@@ -906,6 +924,8 @@ static bool pluginInvoke(NPObject* header, NPIdentifier name, const NPVariant* a
         return testSetStatus(plugin, args, argCount, result);
     else if (name == pluginMethodIdentifiers[ID_RESIZE_TO])
         return testResizeTo(plugin, args, argCount, result);
+    else if (name == pluginMethodIdentifiers[ID_NORMALIZE])
+        return normalizeOverride(plugin, args, argCount, result);
     
     return false;
 }
