@@ -1,3 +1,15 @@
+2010-03-18  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Anders Carlsson.
+
+        https://bugs.webkit.org/show_bug.cgi?id=36327
+        Test that a plug-in can override Node methods of its element
+
+        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
+        (normalizeOverride):
+        (pluginInvoke):
+        Override "normalize", and call back to let a test know that the plug-in was called.
+
 2010-03-17  Dirk Pranke  <dpranke@chromium.org>
 
         Reviewed by Dimitri Glazkov.
