@@ -1,3 +1,13 @@
+2010-03-18  Alexey Proskuryakov  <ap@apple.com>
+
+        Reviewed by Anders Carlsson.
+
+        https://bugs.webkit.org/show_bug.cgi?id=36327
+        Test that a plug-in can override Node methods of its element
+
+        * plugins/override-node-method-expected.txt: Added.
+        * plugins/override-node-method.html: Added.
+
 2010-03-18  Simon Fraser  <simon.fraser@apple.com>
 
         Reviewed by Dave Hyatt.
